--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,8 @@ header {
 
 main {
     grid-area: main;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
@@ -65,6 +67,7 @@ aside {
     background-color: #f9f9f9;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 2px #000;
+    color: #444;
 }
 
 .settings-header {
@@ -83,6 +86,59 @@ aside {
     right: 10px;
 }
 
+.close-button > svg {
+    fill: #444;
+}
+
 .close-button:hover {
     cursor: pointer;
+}
+
+section:first-child {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+form {
+    width: 30%;
+}
+
+.search-box {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+}
+
+#location {
+    border: none;
+    font-size: 1.2rem;
+    width: 100%;
+}
+
+.search-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 8px;
+}
+
+.search-button > svg {
+    fill: #888;
+}
+
+#location:focus {
+    border: none;
+    outline: none;
+}
+
+.active {
+    border: 2px solid #0e2b59;
+}
+
+#active-button {
+    fill: #0e2b59;
 }
