--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@ main {
   grid-area: main;
   display: flex;
   flex-direction: column;
+  background-color: #f4f8ff;
 }
 
 footer {
@@ -99,7 +100,10 @@ section:first-child {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
+  height: 200px;
+  box-shadow: 0px 0px 4px #0e2b59;
+  margin-bottom: 34px;
+  background-color: #ebf1ff;
 }
 
 form {
@@ -112,6 +116,7 @@ form {
   gap: 10px;
   border: 2px solid #ccc;
   border-radius: 10px;
+  background-color: white;
 }
 
 #location {
@@ -197,4 +202,98 @@ form {
 
 #active-setting {
   fill: #0e2b59;
+}
+
+section:nth-child(2) {
+  display: flex;
+  margin-bottom: 50px;
+  gap: 40px;
+  padding: 0px 60px;
+}
+
+.current-weather-container {
+  border: 1px solid #ccc;
+  width: 34%;
+  border-radius: 10px;
+}
+
+.current-weather-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+}
+
+.current-weather-info {
+  min-height: 200px;
+}
+
+.current-weather-heading {
+  padding-left: 16px;
+}
+
+.current-time {
+  padding-right: 16px;
+}
+
+.hourly-weather-container {
+  border: 1px solid #ccc;
+  width: 60%;
+  border-radius: 10px;
+}
+
+.hourly-weather-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+}
+
+.hourly-weather-info {
+  min-height: 200px;
+}
+
+.hourly-weather-header > div:nth-child(1) {
+  padding-left: 16px;
+}
+
+.hourly-weather-header > div:nth-child(2) {
+  padding-right: 16px;
+}
+
+.weekly-weather-container {
+  border: 1px solid #ccc;
+  width: 34%;
+  border-radius: 10px;
+}
+
+.weekly-weather-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+}
+
+.weekly-weather-info {
+  min-height: 600px;
+}
+
+section:nth-child(3) {
+  margin-bottom: 50px;
+  padding: 0px 60px;
+}
+
+.weekly-weather-header > div:nth-child(1) {
+  padding-left: 16px;
+}
+
+.weekly-weather-header > div:nth-child(2) {
+  padding-right: 16px;
+}
+
+section > div {
+  background-color: #fff;
 }
