--- a/src/styles.css
+++ b/src/styles.css
@@ -215,6 +215,8 @@ section:nth-child(2) {
   border: 1px solid #ccc;
   width: 34%;
   border-radius: 10px;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .current-weather-header {
@@ -227,6 +229,10 @@ section:nth-child(2) {
 
 .current-weather-info {
   min-height: 200px;
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+  font-size: 1.2rem;
+  padding-bottom: 6px;
 }
 
 .current-weather-heading {
@@ -296,4 +302,81 @@ section:nth-child(3) {
 
 section > div {
   background-color: #fff;
+}
+
+.weather-icon > svg {
+  width: 125px;
+  height: 125px;
+}
+
+.temperature-figure {
+  margin: 0;
+  font-size: 60px;
+  padding-top: 16px;
+}
+
+.unit {
+  margin: 0;
+  text-align: end;
+  position: relative;
+  bottom: 32px;
+  right: 8px;
+  color: #666;
+}
+
+.current-weather-description {
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+.current-weather-description > p {
+  margin: 0;
+  text-align: center;
+  font-size: 20px;
+  position: relative;
+  bottom: 26px;
+}
+
+.current-weather-details {
+  grid-area: 1 / 3 / 3 / 4;
+  padding-left: 30px;
+  display: grid;
+}
+
+.current-weather-details > div {
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  border-bottom-right-radius: 10px;
+  justify-content: space-between;
+  padding-left: 8px;
+}
+
+p {
+  margin: 0;
+}
+
+.current-weather-details p {
+  padding: 8px 0px;
+}
+
+.current-weather-detail {
+  display: flex;
+  width: 25%;
+}
+
+#wind-unit {
+  font-size: 0.6rem;
+  padding-left: 4px;
+}
+
+.current-weather-details > div > *:first-child {
+  color: #000;
+}
+
+.current-weather-details > div > *:last-child {
+  color: #1e1e1e;
+}
+
+#feels-like-temperature {
+  border: none;
 }
