--- a/src/styles.css
+++ b/src/styles.css
@@ -204,7 +204,7 @@ form {
   fill: #0e2b59;
 }
 
-section:nth-child(2) {
+section:nth-child(3) {
   display: flex;
   margin-bottom: 50px;
   gap: 40px;
@@ -217,6 +217,7 @@ section:nth-child(2) {
   border-radius: 10px;
   display: grid;
   grid-template-rows: auto 1fr;
+  background-color: #fff;
 }
 
 .current-weather-header {
@@ -232,7 +233,6 @@ section:nth-child(2) {
   display: grid;
   grid-template-columns: auto auto 1fr;
   font-size: 1.2rem;
-  padding-bottom: 6px;
 }
 
 .current-weather-heading {
@@ -247,6 +247,9 @@ section:nth-child(2) {
   border: 1px solid #ccc;
   width: 60%;
   border-radius: 10px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  background-color: #fff;
 }
 
 .hourly-weather-header {
@@ -259,6 +262,8 @@ section:nth-child(2) {
 
 .hourly-weather-info {
   min-height: 200px;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
 }
 
 .hourly-weather-header > div:nth-child(1) {
@@ -273,6 +278,7 @@ section:nth-child(2) {
   border: 1px solid #ccc;
   width: 34%;
   border-radius: 10px;
+  background-color: #fff;
 }
 
 .weekly-weather-header {
@@ -284,10 +290,10 @@ section:nth-child(2) {
 }
 
 .weekly-weather-info {
-  min-height: 600px;
+  display: grid;
 }
 
-section:nth-child(3) {
+section:nth-child(4) {
   margin-bottom: 50px;
   padding: 0px 60px;
 }
@@ -298,10 +304,6 @@ section:nth-child(3) {
 
 .weekly-weather-header > div:nth-child(2) {
   padding-right: 16px;
-}
-
-section > div {
-  background-color: #fff;
 }
 
 .weather-icon > svg {
@@ -379,4 +381,234 @@ p {
 
 #feels-like-temperature {
   border: none;
+}
+
+.hours > div {
+  display: none;
+}
+
+#active-hour {
+  display: grid;
+  flex: 1;
+  grid-template-rows: auto;
+}
+
+.hours-frame {
+  height: 100%;
+}
+
+.hours {
+  height: 100%;
+  display: flex;
+}
+
+.first-hour {
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.last-hour {
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.hour > p {
+  text-align: center;
+  font-size: 1.4rem;
+  padding-top: 12px;
+}
+
+.hour-weather-icon {
+  display: flex;
+  justify-content: center;
+}
+
+.hour-temperature > p {
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+.left-arrow svg,
+.right-arrow svg {
+  width: 40px;
+  height: 40px;
+  fill: #0e2b59;
+  padding: 10px;
+}
+
+.left-arrow {
+  grid-area: 1 / 1 / 2 / 2;
+  display: flex;
+  align-items: center;
+}
+
+.right-arrow {
+  grid-area: 1 / 3 / 2 / 4;
+  display: flex;
+  align-items: center;
+}
+
+.left-arrow svg:hover,
+.right-arrow svg:hover {
+  cursor: pointer;
+}
+
+#active-hour:hover {
+  background-color: #ecf2fc;
+}
+
+.weekly-weather-info > div {
+  border-bottom: 1px solid #ccc;
+  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+}
+
+.weekly-day {
+  flex: 1;
+  padding-left: 20px;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.weekly-weather-icon {
+  flex: 1;
+}
+
+.weekly-temperature {
+  flex: 1;
+  font-size: 1.1rem;
+}
+
+.weekly-weather-description {
+  flex: 4;
+  font-size: 1.1rem;
+}
+
+.weekly-temperature > p {
+  padding-left: 10px;
+}
+
+.weekly-weather-description > p {
+  padding-left: 24px;
+}
+
+section:nth-child(2) {
+  display: flex;
+  align-items: center;
+  margin-bottom: 34px;
+  padding: 0px 60px;
+}
+
+/* section > div {
+  background-color: #fff;
+  width: 34%;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+} */
+
+.city-name,
+.country-name {
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 38%;
+  border-bottom: 4px groove #c4ddff;
+  border-radius: 5px;
+}
+
+#city-country {
+  border: none;
+  background-color: #f4f8ff;
+}
+
+#city-country > div:nth-child(1) {
+  width: 86%;
+}
+
+.city-name > h4:nth-child(1) {
+  font-size: 1.5rem;
+  flex: 1;
+}
+
+.country-name > h4:nth-child(1) {
+  font-size: 1.5rem;
+  flex: 1;
+}
+
+.city-name > p:nth-child(2) {
+  font-size: 1.2rem;
+  flex: 3;
+}
+
+.country-name > p:nth-child(2) {
+  font-size: 1.2rem;
+  flex: 3;
+}
+
+section:nth-child(4) {
+  margin-bottom: 50px;
+  padding: 0px 60px;
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.random-weather-container {
+  border: 1px solid #ccc;
+  background-color: white;
+  width: 60%;
+  border-radius: 10px;
+}
+
+.random-weather-header {
+  padding-left: 16px;
+}
+
+.random-weather-container > div {
+  border-bottom: 1px solid #ccc;
+}
+
+.random-weather-container > div:not(:first-child) {
+  padding: 12px 0px;
+  display: flex;
+  font-size: 1.2rem;
+}
+
+.city {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.random-city-weather-icon {
+  flex: 1;
+}
+
+.random-city-weather-temperature {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.random-city-weather-info {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.random-city-weather-icon svg {
+  width: 85px;
+  height: 85px;
+}
+
+.random-city-weather-icon {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
