Created array for worldCities and worldData; created function to fetch search data and fetch world data; created function to fetch names and temps for each world city. Modified renderWorldWeather() in UI.js for rendering fetched data. Removed text content from p elements with city names in template.html. Styled temperature units; invoked fetchWorldData() with .then() and a callback function that invokes renderWorldWeather(); created icons.js module for storing each svg weather icon and fetching them; removed callback function for searchBtn event listener

--- a/src/styles.css
+++ b/src/styles.css
@@ -711,11 +711,11 @@ section:nth-child(4) {
 }
 
 .world-city-temperature > p:last-child {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #444;
   position: relative;
-  top: 15px;
-  right: 16px;
+  top: 12px;
+  left: 4px;
 }
 
 .world-weather-header > h4 {
