--- a/src/styles.css
+++ b/src/styles.css
@@ -319,6 +319,11 @@ section:nth-child(4) {
   padding-right: 16px;
 }
 
+.weather-icon,
+.temperature-icon {
+  margin-top: 10px;
+}
+
 .weather-icon > svg {
   width: 125px;
   height: 125px;
@@ -345,14 +350,7 @@ section:nth-child(4) {
 
 .current-weather-description {
   grid-area: 2 / 1 / 3 / 3;
-}
-
-.current-weather-description > p {
-  margin: 0;
-  text-align: center;
-  font-size: 20px;
-  position: relative;
-  bottom: 26px;
+  margin-bottom: 20px;
 }
 
 .current-weather-details {
@@ -477,9 +475,10 @@ p {
 
 .weekly-weather-info > div {
   border-bottom: 1px solid #ccc;
-  padding: 8px 0px;
+  padding: 10px 0px;
   display: flex;
   align-items: center;
+  gap: 30px;
 }
 
 .weekly-day {
@@ -487,28 +486,30 @@ p {
   padding-left: 20px;
   font-size: 1.1rem;
   font-weight: bold;
+  min-width: 0px;
 }
 
 .weekly-weather-icon {
   flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .weekly-temperature {
   flex: 1;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
+  display: flex;
 }
 
 .weekly-weather-description {
-  flex: 4;
+  flex: 2;
   font-size: 1.1rem;
+  justify-content: center;
 }
 
 .weekly-temperature > p {
   padding-left: 10px;
-}
-
-.weekly-weather-description > p {
-  padding-left: 24px;
 }
 
 section:nth-child(2) {
@@ -709,17 +710,19 @@ section:nth-child(4) {
 .world-city-temperature {
   display: flex;
   align-items: center;
+  font-size: 1.6rem;
+  padding-left: 8px;
 }
 
-.world-city-temperature > p:first-child {
-  font-size: 3rem;
+.world-city-temperature > .temp {
+  font-size: 2.2rem;
 }
 
-.world-city-temperature > p:last-child {
-  font-size: 1.4rem;
+.world-city-temperature > .temp-unit {
+  font-size: 1.1rem;
   color: #444;
   position: relative;
-  top: 12px;
+  top: 10px;
   left: 4px;
 }
 
@@ -751,14 +754,6 @@ footer {
   display: grid;
   grid-template-rows: auto 1fr;
   min-width: 423px;
-}
-
-.precipitation-info > div {
-  min-height: 62px;
-  border-bottom: 1px solid #ccc;
-  display: flex;
-  align-items: center;
-  padding: 8px 0px;
 }
 
 .precipitation-header > h4 {
@@ -847,7 +842,7 @@ footer {
   display: flex;
   align-items: center;
   padding: 8px 0px;
-  gap: 30px;
+  gap: 90px;
 }
 
 .precipitation-day {
@@ -899,7 +894,7 @@ footer {
   font-size: 0.7rem;
 }
 
-#hour-temp-unit {
+.hour-temperature > .hour-temp-unit {
   color: #666;
   font-size: 0.7rem;
   position: relative;
@@ -917,7 +912,18 @@ footer {
   margin: 0;
   text-align: center;
   font-size: 20px;
-  position: relative;
-  bottom: 26px;
   padding-left: 26px;
+}
+
+.world-city-info {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.weekly-temperature > .temp-unit {
+  color: #666;
+  position: relative;
+  font-size: 0.7rem;
+  top: 12px;
+  right: 7px;
 }
