--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,7 @@ h3 {
 
 .hidden,
 #hidden {
-  display: none;
+  display: none !important;
 }
 
 aside {
@@ -101,7 +101,7 @@ aside {
   cursor: pointer;
 }
 
-section:first-child {
+.search-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -209,7 +209,7 @@ form {
   fill: #0e2b59;
 }
 
-section:nth-child(3) {
+.current-hourly-weather-container {
   display: flex;
   margin-bottom: 50px;
   gap: 40px;
@@ -306,7 +306,7 @@ section:nth-child(3) {
   display: grid;
 }
 
-section:nth-child(4) {
+.week-and-sun-container {
   margin-bottom: 50px;
   padding: 0px 60px;
 }
@@ -512,7 +512,7 @@ p {
   padding-left: 10px;
 }
 
-section:nth-child(2) {
+#city-country {
   display: flex;
   align-items: center;
   margin-bottom: 44px;
@@ -575,7 +575,7 @@ section:nth-child(2) {
   padding-left: 16px;
 }
 
-section:nth-child(4) {
+.week-and-sun-container {
   margin-bottom: 50px;
   padding: 0px 60px;
   display: flex;
@@ -926,4 +926,36 @@ footer {
   font-size: 0.7rem;
   top: 12px;
   right: 7px;
+}
+
+.loading {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.weekly-weather-header,
+.precipitation-header {
+  z-index: 10;
+}
+
+.loading > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  gap: 28px;
+}
+
+.loading > div:nth-child(2) > button:nth-child(2) {
+  padding: 8px 70px;
+  font-size: 1.2rem;
+  border: 2px solid #0e2b59;
+  border-radius: 6px;
+}
+
+.loading > div:nth-child(2) > p:nth-child(1) {
+  font-size: 1.4rem;
 }
